--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
-    "expo": "~48.0.18",
-    "expo-dev-client": "~2.2.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-linking": "~4.0.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^51.0.0-canary-20240418-8d74597",
+    "expo-dev-client": "0.0.1-canary-20240418-8d74597",
+    "expo-linear-gradient": "0.0.1-canary-20240418-8d74597",
+    "expo-linking": "0.0.1-canary-20240418-8d74597",
+    "expo-status-bar": "0.0.1-canary-20240418-8d74597",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.74.0-rc.9",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-gesture-handler": "~2.16.0",
+    "react-native-reanimated": "~3.9.0-rc.1",
+    "react-native-safe-area-context": "4.10.0-rc.1",
+    "react-native-screens": "~3.31.0-rc.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
